TestSuite/errors/err0077.pas
  	 // ?? ?????? ???????????????

function operator+(i,j: integer): integer;
begin
  
end;

begin
end.